--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=rastreador
-DB_USER=raphael
-DB_PASSWORD=1001
+DB_USER=
+DB_PASSWORD=
 
 OPENCAGE_API_KEY=e637baa1666c4ba78756e63882242f89
